--- a/TyDtk/TableHeardViewForUser.xib
+++ b/TyDtk/TableHeardViewForUser.xib
@@ -21,7 +21,7 @@
                     </constraints>
                     <state key="normal" image="TouXinagTest.jpg"/>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户名" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-H9-htD">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-H9-htD">
                     <rect key="frame" x="101" y="132" width="200" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="ARe-nw-5Em"/>
