--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -335,7 +335,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uen-uW-0Lt">
-                                <rect key="frame" x="0.0" y="45" width="375" height="573"/>
+                                <rect key="frame" x="0.0" y="45" width="375" height="622"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="G90-pw-eOP">
@@ -365,7 +365,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="12" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOY-TN-Qp3">
-                                                    <rect key="frame" x="97" y="66" width="235" height="20"/>
+                                                    <rect key="frame" x="92" y="66" width="240" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -378,7 +378,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="zsg-FD-jq0" secondAttribute="trailing" constant="10" id="Tqb-mI-Php"/>
                                                 <constraint firstItem="VOY-TN-Qp3" firstAttribute="top" secondItem="ZPF-lh-R5v" secondAttribute="top" id="Z8m-ul-aWG"/>
                                                 <constraint firstItem="VOY-TN-Qp3" firstAttribute="bottom" secondItem="ZPF-lh-R5v" secondAttribute="bottom" id="Zl2-NX-E3m"/>
-                                                <constraint firstItem="VOY-TN-Qp3" firstAttribute="leading" secondItem="ZPF-lh-R5v" secondAttribute="trailing" constant="10" id="myi-Ar-JhC"/>
+                                                <constraint firstItem="VOY-TN-Qp3" firstAttribute="leading" secondItem="ZPF-lh-R5v" secondAttribute="trailing" constant="5" id="myi-Ar-JhC"/>
                                                 <constraint firstItem="zsg-FD-jq0" firstAttribute="leading" secondItem="sb7-wH-Gfu" secondAttribute="leading" constant="10" id="qbI-d3-kBq"/>
                                                 <constraint firstItem="ZPF-lh-R5v" firstAttribute="top" secondItem="zsg-FD-jq0" secondAttribute="bottom" constant="15" id="w1j-kr-p1C"/>
                                             </constraints>
@@ -394,7 +394,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="45"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="科目&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LMY-Ds-XHL">
-                                        <rect key="frame" x="5" y="13" width="36" height="20"/>
+                                        <rect key="frame" x="10" y="13" width="36" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="JGc-Hm-Lub"/>
                                             <constraint firstAttribute="width" constant="36" id="KpJ-nu-jcN"/>
@@ -404,7 +404,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ibv-ZM-Zee">
-                                        <rect key="frame" x="315" y="8" width="55" height="30"/>
+                                        <rect key="frame" x="310" y="8" width="55" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="55" id="aBM-y4-pTu"/>
                                             <constraint firstAttribute="height" constant="30" id="bSX-cZ-BrK"/>
@@ -418,7 +418,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKH-6d-G82">
-                                        <rect key="frame" x="41" y="8" width="211" height="30"/>
+                                        <rect key="frame" x="46" y="8" width="201" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="IP7-0u-tX4"/>
                                         </constraints>
@@ -431,7 +431,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="做题模式&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONu-ha-HUw">
-                                        <rect key="frame" x="257" y="13" width="58" height="20"/>
+                                        <rect key="frame" x="252" y="13" width="58" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="58" id="Llz-yt-6wH"/>
                                             <constraint firstAttribute="height" constant="20" id="MQj-w2-0UA"/>
@@ -443,10 +443,10 @@
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="LMY-Ds-XHL" firstAttribute="leading" secondItem="QPd-90-XA3" secondAttribute="leading" constant="5" id="2OC-33-gtk"/>
+                                    <constraint firstItem="LMY-Ds-XHL" firstAttribute="leading" secondItem="QPd-90-XA3" secondAttribute="leading" constant="10" id="2OC-33-gtk"/>
                                     <constraint firstItem="EKH-6d-G82" firstAttribute="centerY" secondItem="QPd-90-XA3" secondAttribute="centerY" id="5P7-uV-JgW"/>
                                     <constraint firstItem="EKH-6d-G82" firstAttribute="leading" secondItem="LMY-Ds-XHL" secondAttribute="trailing" id="7Oe-q1-VAr"/>
-                                    <constraint firstAttribute="trailing" secondItem="ibv-ZM-Zee" secondAttribute="trailing" constant="5" id="HBq-zG-4i2"/>
+                                    <constraint firstAttribute="trailing" secondItem="ibv-ZM-Zee" secondAttribute="trailing" constant="10" id="HBq-zG-4i2"/>
                                     <constraint firstItem="ibv-ZM-Zee" firstAttribute="leading" secondItem="ONu-ha-HUw" secondAttribute="trailing" id="LcH-iJ-eTp"/>
                                     <constraint firstItem="ibv-ZM-Zee" firstAttribute="centerY" secondItem="QPd-90-XA3" secondAttribute="centerY" id="SjA-jB-M7A"/>
                                     <constraint firstAttribute="height" constant="45" id="cvz-Di-rfk"/>
@@ -458,7 +458,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ho2-Pj-b4T" firstAttribute="top" secondItem="uen-uW-0Lt" secondAttribute="bottom" id="1aR-0k-yHn"/>
+                            <constraint firstItem="Ho2-Pj-b4T" firstAttribute="top" secondItem="uen-uW-0Lt" secondAttribute="bottom" constant="-49" id="1aR-0k-yHn"/>
                             <constraint firstAttribute="trailing" secondItem="uen-uW-0Lt" secondAttribute="trailing" id="Cga-Uz-6u9"/>
                             <constraint firstItem="QPd-90-XA3" firstAttribute="leading" secondItem="5ij-g9-0Ap" secondAttribute="leading" id="Dud-bB-uSS"/>
                             <constraint firstItem="uen-uW-0Lt" firstAttribute="leading" secondItem="5ij-g9-0Ap" secondAttribute="leading" id="Pry-C8-ibJ"/>
@@ -473,6 +473,8 @@
                         <outlet property="buttonSubject" destination="EKH-6d-G82" id="j7a-i7-Sir"/>
                         <outlet property="buttonTypeTopic" destination="ibv-ZM-Zee" id="4bk-zp-mrL"/>
                         <outlet property="tableViewRe" destination="uen-uW-0Lt" id="uIB-a2-Tz0"/>
+                        <segue destination="psZ-67-bwE" kind="show" identifier="startDoTopic" id="xTz-Ds-2vW"/>
+                        <segue destination="sNW-13-Bm9" kind="show" identifier="topicAnalysis" id="T9K-V5-1Ll"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MfV-iA-Oq4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2654,6 +2656,7 @@
         <segue reference="Te0-o5-J6N"/>
         <segue reference="daa-Sr-1Fl"/>
         <segue reference="Lgn-lC-lLr"/>
-        <segue reference="rlR-Gj-gBN"/>
+        <segue reference="xTz-Ds-2vW"/>
+        <segue reference="T9K-V5-1Ll"/>
     </inferredMetricsTieBreakers>
 </document>
